--- a/styles.css
+++ b/styles.css
@@ -2,48 +2,170 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 header {
+    position:relative;
+    margin: 0px 1% 0px 1%;
     background-color: lightgrey;
     border: solid;
     border-width: 1px;
+    height: 90px;
 }
 header h1 {
     text-align: center;
 }
 header button {
     position: absolute;
-    margin: 25px 50% 0px auto;
+    margin: 0px;
     width: 100px;
     height: 30px;
-    top: 3px;
+    top: 30px;
     left: 87%;
 }
 main {
-    display: grid;
-    grid-template-columns: repeat(5, auto);
+    display: flex;
+   /* grid-template-columns: repeat(4, auto);*/
+}
+#wrapper {
+    display: flex;
+    min-height: calc(100vh - 108px);
+    flex-direction: column;
+    justify-content: space-between;
 }
 main aside {
+    font-weight: bold;
     padding: 4px;
-    margin: 10px 5px 5px 10px;
+    margin: 15px 1% 5px 1%;
     background-color: lightgrey;
     border: solid;
     border-width: 1px;
-    grid-column-start: 1;
-    grid-column-end: 2;
+    /*grid-column-start: 1;
+    grid-column-end: 2;*/
     text-align: center;
+    width: 255px;
+    height: 440px;
 }
-#search-criteria  label{
+input[type="radio"] {
+    display:inline-block
+}
+.active {
+    color: black;
+}
+.inactive {
+    color: grey;
+}
+#search-criteria  .search-label{
     display: block;
     text-align: left;
+    margin: 0px 0px 18px 5px;
 }
-.bordered-input
+#search-criteria  .param-label{
+    display: block;
+    text-align: left;
+    margin-bottom: 5px;
+    margin-left: 80px;
+}
+.bordered-input {
+    padding: 5px 0px;
+    display: block;
+    margin-top: 5px;
+    border: solid;
+    border-width: 2px;
+    border-color: #e0e0e0;
+}
 .params {
     width: 45px;
+    float: right;
+    margin-right: 7px;
+}
+/*
+borrowed from: 
+https://www.w3schools.com/howto/howto_css_hide_arrow_number.asp 
+removes arrows on number input
+*/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+    -moz-appearance: textfield;
+}
+.search-text {
+width: 60%;
+height: 25px;
+float: right;
+margin-right: 5px;
+margin-top: -3px;
+}
+#button-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 10px; 
+}
+#button-container button{
+    width:49%;
+    height: 30px;
+    border-radius: 5px;
+    border: solid 1px;
+    margin-top: -5px
 }
 main section {
+    margin: 15px 1% 5px 0px;
+    background-color: lightgrey;
     grid-column-start: 2;
     grid-column-end: 6; 
     text-align: center;
+    overflow-y: scroll;
+    width: calc(100vw - 255px);
+    height: 450px;
+
+    /*set min-width once we know list width*/
+}
+section ul{
+    margin-left: -30px;
+}
+section ul li{
+    text-align: left;
+    display: grid;
+    grid-template-columns: 4fr 2fr 1fr 2fr 2fr 1fr; 
+}
+section ul li label{
+    display: inline-block;
+}
+/*
+https://css-tricks.com/snippets/css/css-triangle/
+old i know.
+*/
+.arrow {
+    width: 0; 
+    height: 0; 
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    display:inline-block;
+    border-top:10px solid skyblue;
+    margin: 0px 2px 0px 0px;
+}
+#first-cell {
+
+}
+.remaining-cells {
+
+}
+.result-item {
+    background-color: grey;
+    margin: 0px 0px 10px 0px;
+}
+#last-cell {
+
 }
 footer {
     text-align: center;
+}
+li .button-container {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    padding-right: 10px;
+}
+li button {
+    height: 22px;
 }
